# pombur

./: .pre-commit-config.yaml  alembic.ini  pyproject.toml  setup.cfg
migrations/: env.py
migrations/versions/: 0a6a2f02b8ba_alter_table_department.py  2025_04_06_2152-97e6b5c8831b_insert_root_department.py  2025_04_07_1747-2e5d9b672e80_create_employee_table.py  2025_04_07_1756-9fe3e41b620c_alter_table_department.py  2025_04_07_1812-8cf56b672ac4_alter_table_department.py  2025_04_08_2051-de1925bd6609_alter_table_employee.py  2025_04_13_2343-f033e3e5e21f_alter_table_employee.py  2025_04_27_1420-d935982df61e_add_slug_to_department_table.py  3b0fe05fbf4e_create_department_table.py
src/: config.py  ioc.py  litestar_utils.py  logs.py  main.py
src/apps/company_structure/: __init__.py  ioc.py
src/apps/company_structure/application/: dto.py  ports.py  schemas.py  services.py  use_cases.py
src/apps/company_structure/controllers/: dto.py  dtos.py  http.py  router.py  routers.py  schemas.py  web_interface.py
src/apps/company_structure/domain/: aggregates.py  entities.py  exceptions.py
src/apps/company_structure/infrastructure/: configs.py  connections.py  gateways.py  models.py  repository.py
src/apps/index/: __init__.py
src/apps/index/controllers/: http.py  router.py  web_interface.py
src/common/controllers/: context_schemas.py
src/static/scripts/: company_structure_tree.js
src/templates/: base.html.jinja
src/templates/company_structure/: index.html.jinja
src/templates/company_structure/components/: tree-list-dropdown.html.jinja
src/templates/index/: index.html.jinja
src/templates/layouts/: breadcrumb.html.jinja  footer-js.html  head-page-meta.html.jinja  sidebar.html  sidebar.html.jinja
(+17 files in other folders)
