[project]
name = "pombur"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dishka>=1.5.2",
    "litestar[pydantic,sqlalchemy,standard]>=2.15.1",
    "psycopg[binary]>=3.2.6",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.4",
    "wemake-python-styleguide>=1.1.0",
]


[tool.mypy]
strict = true

enable_error_code = [
  "truthy-bool",
  "truthy-iterable",
  "redundant-expr",
  "unused-awaitable",
  "ignore-without-code",
  "possibly-undefined",
  "redundant-self",
  "explicit-override",
  "mutable-override",
  "unimported-reveal",
  "deprecated",
]


[tool.ruff]
line-length = 100
exclude = ["migrations"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = ["ALL"]
external = ["WPS"]
ignore = [
    # pydocstyle (D)
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in `__init__`

    # formatter compatibility
    "COM812",  # Missing trailing comma
]
